--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,14 +1,66 @@
-* {
+*, *::before, *::after {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
   font-family: sans-serif;
-  /* margin: 3rem; */
   background-color: #dfdfdf;
 }
 
+a {
+  text-decoration: none;
+}
+
+.navbar {
+  width: 100%;
+  height: 5vh;
+  background-color: lightblue;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+}
+
+.logo {
+  margin-left: 20px;
+  flex: 1;
+}
+
+.nav-link a {
+  display: block;
+}
+
+.nav-link {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+  gap: 20px;
+  margin-right: 20px;
+}
+
+.hamburger {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.ham {
+  margin: 4px 0;
+  background-color: black;
+  width: 27px;
+  height: 2px;
+}
+
+.hamburger-menu {
+  margin-left: 20px;
+}
+
+
 /*
+from youtube tutorial
 h1, h2 {
   color: #333333;
 }
