--- a/src/style/index.css
+++ b/src/style/index.css
@@ -20,7 +20,7 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: absolute;
+  position: fixed;
 }
 
 .logo {
@@ -56,9 +56,13 @@ a {
 
 .hamburger-menu {
   margin-left: 20px;
+  transition: transform 1s, border, padding;
 }
 
-.search-box {
+.hamburger-menu:hover {
+  transform: scale(1.2, 1.2);
+  border: 1px solid black;
+  padding: 5px;
 }
 
 .searchbar input {
@@ -66,6 +70,39 @@ a {
   height: 30px;
   width: 500px;
   padding-left: 10px;
+}
+
+.container {
+  display: flex;
+}
+
+.aside-left a {
+  display: block;
+}
+
+.aside-left {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  padding-top: 5vh;
+  height: 100vh;
+  width: 100px;
+  background-color: pink;
+  flex: 1;
+}
+
+.aside-link {
+  font-weight: bold;
+  text-align: center;
+  padding: 20px;
+  width: 100px;
+  background-color: white;
+  margin: 20px 0;
+}
+
+main {
+  padding-top: 5vh;
+  flex: 11;
 }
 
 
