--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,174 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,300;1,400&display=swap');
+
 *, *::before, *::after {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: 'Roboto', sans-serif;
 }
-
-body {
-  font-family: sans-serif;
-  background-color: #dfdfdf;
-}
-
-a {
-  text-decoration: none;
-}
-
-.navbar {
-  width: 100%;
-  height: 5vh;
-  background-color: lightblue;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: fixed;
-}
-
-.logo {
-  margin-left: 20px;
-  flex: 1;
-}
-
-.nav-link a {
-  display: block;
-}
-
-.nav-link {
-  flex: 1;
-  display: flex;
-  justify-content: flex-end;
-  gap: 20px;
-  margin-right: 20px;
-}
-
-.hamburger {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.ham {
-  margin: 4px 0;
-  background-color: black;
-  width: 27px;
-  height: 2px;
-}
-
-.hamburger-menu {
-  margin-left: 20px;
-  transition: transform 1s, border, padding;
-}
-
-.hamburger-menu:hover {
-  transform: scale(1.2, 1.2);
-  border: 1px solid black;
-  padding: 5px;
-}
-
-.searchbar input {
-  display: block;
-  height: 30px;
-  width: 500px;
-  padding-left: 10px;
-}
-
-.container {
-  display: flex;
-}
-
-.aside-left a {
-  display: block;
-}
-
-.aside-left {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  padding-top: 5vh;
-  height: 100vh;
-  width: 100px;
-  background-color: pink;
-  flex: 1;
-}
-
-.aside-link {
-  font-weight: bold;
-  text-align: center;
-  padding: 20px;
-  width: 100px;
-  background-color: white;
-  margin: 20px 0;
-}
-
-main {
-  padding-top: 5vh;
-  flex: 11;
-}
-
-
-/*
-from youtube tutorial
-h1, h2 {
-  color: #333333;
-}
-
-.btn {
-  font: inherit;
-  padding: 0.5rem 1.5rem;
-  cursor: pointer;
-  border-radius: 4px;
-  background-color: #800040;
-  color: white;
-  border: 1px solid #800040;
-  margin: 0 1rem;
-}
-
-.btn:hover {
-  background-color: #9c1458;
-  border-color: #9c1458;
-}
-
-.btn--alt {
-  background-color: transparent;
-  color: #800040;
-}
-
-.btn--alt:hover {
-  background-color: #f8dae9;
-}
-
-.card {
-  background-color: white;
-  border-radius: 4px;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-  padding: 1rem;
-  width: 20rem;
-}
-
-.actions {
-  text-align: right;
-}
-
-.modal {
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-  border-radius: 6px;
-  background-color: white;
-  padding: 1rem;
-  text-align: center;
-  width: 30rem;
-  z-index: 10;
-  position: fixed;
-  top: 20vh;
-  left: calc(50% - 15rem);
-}
-
-.backdrop {
-  position: fixed;
-  z-index: 1;
-  background-color: rgba(0, 0, 0, 0.75);
-  width: 100%;
-  height: 100vh;
-  top: 0;
-  left: 0;
-}
-*/
