--- a/src/style/index.css
+++ b/src/style/index.css
@@ -16,6 +16,8 @@ body {
   height: 100px;
   border: 1px solid black;
   margin: 5px;
+  cursor: pointer;
+  background-color: ivory;
   transition: 
     background-color 0.5s,
     transform 0.5s
